--- a/OnlineKart/Views/Category/Index.cshtml
+++ b/OnlineKart/Views/Category/Index.cshtml
@@ -31,10 +31,10 @@
                 <td>@obj.Name</td>
                 <td>@obj.DisplayOrder</td>           
                 <td>
-                        <a asp-controller="" asp-action="" class=""><i class="bi bi-pencil-square"></i></a>
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class=""><i class="bi bi-pencil-square"></i></a>
                 </td>
                 <td>
-                        <a asp-controller="" asp-action="" class=""><i class="bi bi-trash3-fill"></i></a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class=""><i class="bi bi-trash3-fill"></i></a>
                 </td>
             </tr>
         }
