--- a/OnlineKart/Views/Shared/_Layout.cshtml
+++ b/OnlineKart/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OnlineKart.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" /><!--For toastr notification-->
 </head>
 <body>
     <header>
@@ -31,7 +32,9 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notifiaction" />
             @RenderBody()
+            
         </main>
     </div>
 
